syntax = "proto3";

import "domains/nutrition/models/macros.proto";

import "pkg/types/weekday.proto";

import "google/protobuf/timestamp.proto";


package domains.nutrition.models;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/models";

message NutritionStep {
    domains.nutrition.models.Macros macros_requirements = 1;
    google.protobuf.Timestamp start_timestamp = 2;
    google.protobuf.Timestamp finish_timestamp = 3;
    string title = 4; // breakfast, etc...
};

message NutritionLifestyleTemplate {
	string hex_id = 1;
    string title = 2;
    string author = 3;
    int64 cycle_duration_days = 4;
	repeated NutritionStep nutrition_steps = 5;
	domains.nutrition.models.Macros average_daily_macros = 6;
    pkg.types.Weekday starting_weekday = 7;
};
